# TradingRECs

./: LICENSE  README.md
Algorand/AzureSphereApp/: CMakeLists.txt  app_manifest.json  main.c  web_client.c
Algorand/AzureSphereApp/include/: req_construct.h
Algorand/AzureSphereApp/source/: ecc.c  random.c  req_construct.c  ui.c  web_client.c
Algorand/AzureSphereApp/source/wolfssl/: random.c
Algorand/AzureSphereApp/wolfssl/: user_settings.h
Algorand/AzureSphereApp/wolfssl/ARM/Debug/wolfssl.tlog/: wolfssl.lastbuildstate
Algorand/AzureSphereApp/wolfssl/wolfcrypt_test/: wolfcrypt_test.vcxproj
Algorand/AzureSphereApp/wolfssl/wolfssl/wolfcrypt/: settings.h  types.h
Algorand/algorandNetwork/: create_network.sh  destroy_network.sh  mnemonicBuyer.txt  mnemonicRECAggregator.txt  mnemonicSeller.txt  ownerAddr.txt  tokenToConnect.txt
Algorand/algorandNetwork/prv_network/: Wallet1.0.3000000.partkey  Wallet2.0.3000000.partkey  Wallet2.rootkey  (+3 more)
Algorand/azureSphereApplication/: HTTPS_Curl_Multi.sln
Algorand/clientApplication/: buyer.js  config.json  package-lock.json  package.json  seller.js
Algorand/middlewareAPI/: config.json  helpful.txt  index.js  package-lock.json  package.json
Algorand/middlewareAPI_old/: index.js  package-lock.json  package.json
Algorand/scripts/: getPort.sh  populateCerts.sh  queryAPI.sh  registerAPI.sh
Fabric/AzureFunctionSingTelemetry/: local.settings.json
Fabric/AzureSphere_InterCommAndADC_RT/: CMakeLists.txt  app_manifest.json  main.c
Fabric/automizedScriptHL_COOChaincode_HLClient/: installFabric.sh  startFabric.sh
(+146 files in other folders)
